--- a/iflix/Base.lproj/Main.storyboard
+++ b/iflix/Base.lproj/Main.storyboard
@@ -1,24 +1,197 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="aJz-w0-xel">
+    <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Movies-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MoviesViewController" customModule="iflix" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="134" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="adj-KU-JjR">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="134" id="vZE-ZY-X4m" customClass="MovieCell" customModule="iflix" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="134"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vZE-ZY-X4m" id="6MA-Za-lWA">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="134"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="re4-Va-f6S">
+                                                    <rect key="frame" x="148" y="20" width="246" height="29"/>
+                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ivG-q6-myO">
+                                                    <rect key="frame" x="11" y="11" width="114" height="112"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="114" id="SAq-Tb-d6x"/>
+                                                        <constraint firstAttribute="height" constant="112" id="jJW-zz-M2B"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yx0-Zz-T3L">
+                                                    <rect key="frame" x="148" y="46" width="246" height="88"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="re4-Va-f6S" firstAttribute="trailing" secondItem="6MA-Za-lWA" secondAttribute="trailingMargin" id="1VC-kw-rqx"/>
+                                                <constraint firstItem="Yx0-Zz-T3L" firstAttribute="top" secondItem="6MA-Za-lWA" secondAttribute="topMargin" constant="35" id="4ww-vH-JMN"/>
+                                                <constraint firstItem="re4-Va-f6S" firstAttribute="top" secondItem="6MA-Za-lWA" secondAttribute="topMargin" constant="9" id="POw-uf-HTr"/>
+                                                <constraint firstAttribute="bottom" secondItem="ivG-q6-myO" secondAttribute="bottom" constant="11" id="SJ4-x7-xPv"/>
+                                                <constraint firstItem="Yx0-Zz-T3L" firstAttribute="trailing" secondItem="6MA-Za-lWA" secondAttribute="trailingMargin" id="Vta-87-Zzs"/>
+                                                <constraint firstItem="Yx0-Zz-T3L" firstAttribute="leading" secondItem="ivG-q6-myO" secondAttribute="trailing" constant="23" id="atV-eS-dYX"/>
+                                                <constraint firstAttribute="bottom" secondItem="ivG-q6-myO" secondAttribute="bottom" constant="11" id="dez-mR-pf3"/>
+                                                <constraint firstItem="re4-Va-f6S" firstAttribute="leading" secondItem="ivG-q6-myO" secondAttribute="trailing" constant="23" id="fYz-Zp-ItU"/>
+                                                <constraint firstItem="ivG-q6-myO" firstAttribute="top" secondItem="6MA-Za-lWA" secondAttribute="top" constant="11" id="iZH-al-Vez"/>
+                                                <constraint firstItem="Yx0-Zz-T3L" firstAttribute="bottom" secondItem="6MA-Za-lWA" secondAttribute="bottomMargin" constant="11" id="uQk-Qw-UY0"/>
+                                                <constraint firstItem="ivG-q6-myO" firstAttribute="leading" secondItem="6MA-Za-lWA" secondAttribute="leading" constant="11" id="zxR-rH-dbd"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="posterView" destination="ivG-q6-myO" id="Cs0-9p-sMA"/>
+                                            <outlet property="synopsisLabel" destination="Yx0-Zz-T3L" id="0cJ-JQ-hwc"/>
+                                            <outlet property="titleLabel" destination="re4-Va-f6S" id="Odt-5X-2rp"/>
+                                            <segue destination="r1S-l8-J1x" kind="show" id="HQ2-fc-QcG"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="adj-KU-JjR" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="LrV-qe-voJ"/>
+                            <constraint firstItem="adj-KU-JjR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="fjl-N0-0ry"/>
+                            <constraint firstItem="adj-KU-JjR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="qoa-P0-elY"/>
+                            <constraint firstAttribute="bottom" secondItem="adj-KU-JjR" secondAttribute="bottom" id="s7y-gd-1QD"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Movies" id="9aL-ag-zKz"/>
+                    <connections>
+                        <outlet property="tableView" destination="adj-KU-JjR" id="dn6-Y5-zCI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1047.8260869565217" y="137.94642857142856"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="eLf-m0-vzD">
+            <objects>
+                <tabBarController id="Hsp-Qf-nct" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eYJ-jg-3l0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="aJz-w0-xel" kind="relationship" relationship="viewControllers" id="zSx-uK-ckR"/>
+                        <segue destination="jwH-kM-Bth" kind="relationship" relationship="viewControllers" id="CAk-yE-WUE"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k55-Ew-MWO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="138" y="-617"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="rrT-Jz-SNI">
+            <objects>
+                <viewController id="jwH-kM-Bth" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="jKD-T8-EP6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="ns3-HN-HaR"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="L1N-JU-peX"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bFW-hh-qm5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="977" y="-617"/>
+        </scene>
+        <!--Movie Details View Controller-->
+        <scene sceneID="C7h-Nj-P7m">
+            <objects>
+                <viewController id="r1S-l8-J1x" customClass="MovieDetailsViewController" customModule="iflix" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8cv-FL-0iG">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lAV-8G-iqj">
+                                <rect key="frame" x="0.0" y="88" width="414" height="183"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="s87-uE-qTu">
+                                <rect key="frame" x="11" y="199" width="103" height="137"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XIg-le-iJc">
+                                <rect key="frame" x="20" y="345" width="374" height="135"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bvt-i9-lCW">
+                                <rect key="frame" x="132" y="279" width="228" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="AeY-bO-ikd"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="NxJ-SC-GWk"/>
+                    <connections>
+                        <outlet property="backDropImageView" destination="lAV-8G-iqj" id="xqp-Xg-Jw8"/>
+                        <outlet property="posterImageView" destination="s87-uE-qTu" id="upB-e1-lyk"/>
+                        <outlet property="synopsisLabel" destination="XIg-le-iJc" id="jZ3-hy-gFh"/>
+                        <outlet property="titleLabel" destination="bvt-i9-lCW" id="Hd6-Zc-LgM"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dg0-kL-Oic" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1750.7246376811595" y="137.94642857142856"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="uhS-yX-suB">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aJz-w0-xel" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="xyf-Ix-fgi"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kxE-CJ-bfi">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="EON-jx-31q"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OhD-wF-Shg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
